// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntityViewer should render 1 1`] = `
<div
  className="content-header-title"
>
  <Connect(I18NLink)
    className="btn btn-default"
    confirmMessage=""
    confirmTitle=""
    to="/settings/dictionaries/cockpit/id-thes"
  >
    <Connect(Icon)
      icon="arrow-left"
    />
    <span
      className="btn-label"
    >
      <Translate
        context="System"
      >
        Back to
      </Translate>
       
      <span>
        'Thes'
      </span>
    </span>
  </Connect(I18NLink)>
  <span
    className="large"
  >
    <span
      className="space8"
    />
    <Translate
      context="System"
    >
      Documents including suggestion:
    </Translate>
     
    <b>
      'Topic1'
    </b>
    <span
      className="separator"
    />
  </span>
  <div>
    <Translate
      context="System"
    >
      Document
    </Translate>
     
    <span>
      4
    </span>
     
    <Translate
      context="System"
    >
      of
    </Translate>
     
    <span>
      &gt;39
    </span>
    <span
      className="space8"
    />
  </div>
  <span>
    <button
      className="btn btn-default"
      onClick={[Function]}
      type="button"
    >
      <Connect(Icon)
        icon="arrow-left"
      />
    </button>
    <button
      className="btn btn-default"
      onClick={[Function]}
      type="button"
    >
      <Connect(Icon)
        icon="arrow-right"
      />
    </button>
  </span>
</div>
`;

exports[`EntityViewer should render 2 1`] = `
<div
  className="content-header-title"
>
  <span
    className="large"
  >
    <span
      className="space8"
    />
    <Translate
      context="System"
    >
      Documents for custom filter
    </Translate>
    <span
      className="separator"
    />
  </span>
  <div>
    <Translate
      context="System"
    >
      Document
    </Translate>
     
    <span>
      1
    </span>
     
    <Translate
      context="System"
    >
      of
    </Translate>
     
    <span>
      10
    </span>
    <span
      className="space8"
    />
  </div>
  <span>
    <button
      className="btn btn-default btn-disabled"
      onClick={[Function]}
      type="button"
    >
      <Connect(Icon)
        icon="arrow-left"
      />
    </button>
    <button
      className="btn btn-default"
      onClick={[Function]}
      type="button"
    >
      <Connect(Icon)
        icon="arrow-right"
      />
    </button>
  </span>
</div>
`;
